<resources>
    <string name="app_name">Layout Exercise</string>
    <string name="lets_start">Let\'s Start!</string>
    <string name="efficiently_and_effectively">efficiently and effectively</string>
    <string name="learn_at_home">Learn at home!</string>
    <string name="start_now">Start Now</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="sign_in">Sign in</string>
    <string name="password">Password</string>
    <string name="get_unlimited_access">Get unlimited access!</string>
</resources>