<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="268dp"
        android:layout_height="344dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_startimage" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="170dp"
        android:layout_height="48dp"
        android:layout_marginTop="22dp"
        android:fontFamily="@font/acme"
        android:text="@string/lets_start"
        android:textColor="#2C2B47"
        android:textSize="38sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="331dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/ic_startinputbackground"
        android:fontFamily="@font/acme"
        android:hint="Email"
        android:inputType="textEmailAddress"
        android:textSize="14dp"
        android:paddingLeft="20dp"
        android:textColorHint="#2C2B47"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="331dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/ic_startinputbackground"
        android:fontFamily="@font/acme"
        android:hint="@string/password"
        android:textSize="14sp"
        android:inputType="textPassword"
        android:drawableRight="@drawable/ic_show_password"
        android:padding="20dp"
        android:paddingLeft="20sp"
        android:textColorHint="#2C2B47"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />

    <Button
        android:id="@+id/button2"
        android:layout_width="126dp"
        android:layout_height="58dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#2C2B47"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextPassword"
        app:layout_constraintHorizontal_bias="0.579"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPassword"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="183dp"
        android:layout_height="19dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/acme"
        android:text="@string/dont_have_an_account"
        android:textColor="#B9B8C6"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextPassword"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPassword"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="100dp"
        android:fontFamily="@font/acme"
        android:text="Sign up"
        android:textColor="#2C2B47"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

</androidx.constraintlayout.widget.ConstraintLayout>